--- a/Demo20181022.ipynb
+++ b/Demo20181022.ipynb
@@ -1725,6 +1725,24 @@
     "\n",
     "speak(qa.get(listenTo(), '我現在沒那麼聰明,變聰明後再回答你'))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Kaggle 資料處理"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "df = pandas.read_csv('data/train.csv')\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
