--- a/Demo20181022.ipynb
+++ b/Demo20181022.ipynb
@@ -5416,6 +5416,481 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fullData['Electrical'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SBrkr    2671\n",
+       "FuseA     188\n",
+       "FuseF      50\n",
+       "FuseP       8\n",
+       "Mix         1\n",
+       "Name: Electrical, dtype: int64"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fullData['Electrical'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fullData['Electrical'].fillna(\"SBrkr\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fullData['Electrical'].isnull().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fullData['KitchenQual'].value_counts()\n",
+    "fullData['KitchenQual'].fillna(\"TA\", inplace=True)\n",
+    "fullData['KitchenQual'].isnull().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fullData['Exterior1st'].value_counts()\n",
+    "fullData['Exterior1st'].fillna(\"VinylSd\", inplace=True)\n",
+    "fullData['Exterior1st'].isnull().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fullData['Exterior2nd'].value_counts()\n",
+    "fullData['Exterior2nd'].fillna(\"VinylSd\", inplace=True)\n",
+    "fullData['Exterior2nd'].isnull().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fullData['MasVnrType'].value_counts()\n",
+    "fullData['MasVnrType'].fillna(\"None\", inplace=True)\n",
+    "fullData['MasVnrType'].isnull().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    2896.000000\n",
+       "mean      102.201312\n",
+       "std       179.334253\n",
+       "min         0.000000\n",
+       "25%         0.000000\n",
+       "50%         0.000000\n",
+       "75%       164.000000\n",
+       "max      1600.000000\n",
+       "Name: MasVnrArea, dtype: float64"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fullData['MasVnrArea'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fullData['MasVnrArea'].fillna(0.0, inplace=True)\n",
+    "fullData['MasVnrArea'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TA    1283\n",
+      "Gd    1209\n",
+      "Ex     258\n",
+      "Fa      88\n",
+      "Name: BsmtQual, dtype: int64\n",
+      "TA    2606\n",
+      "Gd     122\n",
+      "Fa     104\n",
+      "Po       5\n",
+      "Name: BsmtCond, dtype: int64\n",
+      "Unf    851\n",
+      "GLQ    849\n",
+      "ALQ    429\n",
+      "Rec    288\n",
+      "BLQ    269\n",
+      "LwQ    154\n",
+      "Name: BsmtFinType1, dtype: int64\n",
+      "Unf    2493\n",
+      "Rec     105\n",
+      "LwQ      87\n",
+      "BLQ      68\n",
+      "ALQ      52\n",
+      "GLQ      34\n",
+      "Name: BsmtFinType2, dtype: int64\n",
+      "No    1904\n",
+      "Av     418\n",
+      "Gd     276\n",
+      "Mn     239\n",
+      "Name: BsmtExposure, dtype: int64\n",
+      "0.0    1705\n",
+      "1.0    1172\n",
+      "2.0      38\n",
+      "3.0       2\n",
+      "Name: BsmtFullBath, dtype: int64\n",
+      "0.0    2742\n",
+      "1.0     171\n",
+      "2.0       4\n",
+      "Name: BsmtHalfBath, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in ['BsmtQual','BsmtCond','BsmtFinType1','BsmtFinType2',\\\n",
+    "            'BsmtExposure','BsmtFullBath','BsmtHalfBath']:\n",
+    "    print(fullData[col].value_counts())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fullData['BsmtQual'].fillna(\"None\", inplace=True)\n",
+    "fullData['BsmtCond'].fillna(\"None\", inplace=True)\n",
+    "fullData['BsmtFinType1'].fillna(\"None\", inplace=True)\n",
+    "fullData['BsmtFinType2'].fillna(\"None\", inplace=True)\n",
+    "fullData['BsmtExposure'].fillna(\"No\", inplace=True)\n",
+    "fullData['BsmtFullBath'].fillna(0, inplace=True)\n",
+    "fullData['BsmtHalfBath'].fillna(0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    2918.000000\n",
+      "mean      441.423235\n",
+      "std       455.610826\n",
+      "min         0.000000\n",
+      "25%         0.000000\n",
+      "50%       368.500000\n",
+      "75%       733.000000\n",
+      "max      5644.000000\n",
+      "Name: BsmtFinSF1, dtype: float64\n",
+      "count    2918.000000\n",
+      "mean       49.582248\n",
+      "std       169.205611\n",
+      "min         0.000000\n",
+      "25%         0.000000\n",
+      "50%         0.000000\n",
+      "75%         0.000000\n",
+      "max      1526.000000\n",
+      "Name: BsmtFinSF2, dtype: float64\n",
+      "count    2918.000000\n",
+      "mean      560.772104\n",
+      "std       439.543659\n",
+      "min         0.000000\n",
+      "25%       220.000000\n",
+      "50%       467.000000\n",
+      "75%       805.500000\n",
+      "max      2336.000000\n",
+      "Name: BsmtUnfSF, dtype: float64\n",
+      "count    2918.000000\n",
+      "mean     1051.777587\n",
+      "std       440.766258\n",
+      "min         0.000000\n",
+      "25%       793.000000\n",
+      "50%       989.500000\n",
+      "75%      1302.000000\n",
+      "max      6110.000000\n",
+      "Name: TotalBsmtSF, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in ['BsmtFinSF1','BsmtFinSF2','BsmtUnfSF','TotalBsmtSF']:\n",
+    "    print(fullData[col].describe())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fullData['BsmtFinSF1'].fillna(0.0, inplace=True)\n",
+    "fullData['BsmtFinSF2'].fillna(0.0, inplace=True)\n",
+    "fullData['BsmtUnfSF'].fillna(467.0, inplace=True)\n",
+    "fullData['TotalBsmtSF'].fillna(0.0, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fullData['GarageCond'].value_counts()\n",
+    "fullData['GarageCond'].fillna(\"TA\", inplace=True)\n",
+    "fullData['GarageCond'].isnull().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fullData['GarageType'].value_counts()\n",
+    "fullData['GarageType'].fillna(\"Attchd\", inplace=True)\n",
+    "fullData['GarageType'].isnull().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fullData['GarageFinish'].value_counts()\n",
+    "fullData['GarageFinish'].fillna(\"Unf\", inplace=True)\n",
+    "fullData['GarageFinish'].isnull().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fullData['GarageQual'].value_counts()\n",
+    "fullData['GarageQual'].fillna(\"TA\", inplace=True)\n",
+    "fullData['GarageQual'].isnull().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GarageCars 0\n",
+      "GarageArea 0\n",
+      "GarageCars 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in ['GarageCars','GarageArea','GarageCars']:\n",
+    "    filldata = fullData[col].value_counts().argmax()\n",
+    "    fullData[col].fillna(filldata, inplace=True)\n",
+    "    print(col, fullData[col].isnull().sum())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "category_col = fullData.select_dtypes(['object']).columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_col  = fullData.select_dtypes(exclude = ['object']).columns "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
