add requests get

--- a/Demo20181029.ipynb
+++ b/Demo20181029.ipynb
@@ -869,6 +869,163 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 蘋果網路爬蟲"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "res = requests.get('https://tw.appledaily.com/new/realtime')\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "soup = BeautifulSoup(res.text, 'lxml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "159"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(soup.select('a'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(soup.select('li.rtddt a'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "【普悠瑪司機】尤振仲住院8天今出院　女兒...(19615)\n",
+      "============================\n",
+      "「不想繼續幫韓國瑜造勢」　綠委低調不評論...\n",
+      "============================\n",
+      "【普悠瑪調查】剩今天！司機員50萬交保檢...(6120)\n",
+      "============================\n",
+      "【記者會全文】邱議瑩反擊：陪睡政見是韓國...(73960)\n",
+      "============================\n",
+      "【小型運動休旅】6夯車省油比一比　有3輛...(14611)\n",
+      "============================\n",
+      "〈雙姝爭后1〉Sandy搶《聲林之王》主...\n",
+      "============================\n",
+      "​〈雙姝爭后2〉吳宗憲聯手女兒Sandy...\n",
+      "============================\n",
+      "​〈雙姝爭后3〉漲價or靠自己 綜藝天王...\n",
+      "============================\n",
+      "【獨家】白家綺新婚9天被爆戀過汪建民　甜...\n",
+      "============================\n",
+      "台鐵新局長張政源自願從政次降任　月薪少了...(4317)\n",
+      "============================\n",
+      "華德動能交付欣欣客運12台電動巴士　今上...\n",
+      "============================\n",
+      "賓士車撞翻救護車　病患飛出車外(2075)\n",
+      "============================\n",
+      "今年雙11出生寶寶    送7990元大...(4064)\n",
+      "============================\n",
+      "羨慕同學捧現金炫富　男大生出賣帳戶成詐欺...(79)\n",
+      "============================\n",
+      "《藍色大門》泳池將拆除　陳柏霖桂綸鎂重溫...(188)\n",
+      "============================\n",
+      "【獨家】小S新節目無奈減薪　吞4千萬義大...(102544)\n",
+      "============================\n",
+      "王景玉逃死出庭精神佳　秒回個資稱「都有吃...(9677)\n",
+      "============================\n",
+      "【最即時專題5】邱議瑩繼續譴責韓國瑜　陳...(829)\n",
+      "============================\n",
+      "【更新】墜江影片曝光！重慶公車衝落長江　...(7852)\n",
+      "============================\n",
+      "流感疫苗變質影響接種﹖　疾管署：持續監控(135)\n",
+      "============================\n",
+      "女搭小黃忘拿萬元筆電　熱心警1小時尋回(235)\n",
+      "============================\n",
+      "辱罵兄長女友髒字　女遭公然侮辱起訴(300)\n",
+      "============================\n",
+      "新竹晶品城百貨男子墜樓　送醫無生命跡象(701)\n",
+      "============================\n",
+      "2月大女嬰猝死遭丟包醫院　狠心母逃跑原因...(15633)\n",
+      "============================\n",
+      "印尼獅航墜海189人生死未卜　外交部：持...(2598)\n",
+      "============================\n",
+      "普悠瑪事故創花東　觀光局補助出遊交通費1...(1422)\n",
+      "============================\n",
+      "騎車被狗咬！張震嶽打破傷風救命　怒「不該...(2412)\n",
+      "============================\n",
+      "大里噴沙工廠傳火警　警消迅速撲滅無傷亡(74)\n",
+      "============================\n",
+      "機車撞上故障廂型車　騎士送醫不治(1173)\n",
+      "============================\n",
+      "【最即時專題1】「老婆讓韓國瑜睡一晚」　...(141176)\n",
+      "============================\n"
+     ]
+    }
+   ],
+   "source": [
+    "for news in soup.select('.rtddt a'):\n",
+    "    print(news.select_one('h1').text)\n",
+    "    print('============================')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
