--- a/Demo20181029.ipynb
+++ b/Demo20181029.ipynb
@@ -949,80 +949,394 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "【普悠瑪司機】尤振仲住院8天今出院　女兒...(19615)\n",
+      "【普悠瑪司機】尤振仲住院8天今出院　女兒...(19615) 社會 13:05 https://tw.news.appledaily.com/local/realtime/20181029/1456153/\n",
       "============================\n",
-      "「不想繼續幫韓國瑜造勢」　綠委低調不評論...\n",
+      "「不想繼續幫韓國瑜造勢」　綠委低調不評論... 政治 13:05 https://tw.news.appledaily.com/politics/realtime/20181029/1456259/\n",
       "============================\n",
-      "【普悠瑪調查】剩今天！司機員50萬交保檢...(6120)\n",
+      "【普悠瑪調查】剩今天！司機員50萬交保檢...(6120) 社會 13:04 https://tw.news.appledaily.com/local/realtime/20181029/1456121/\n",
       "============================\n",
-      "【記者會全文】邱議瑩反擊：陪睡政見是韓國...(73960)\n",
+      "【記者會全文】邱議瑩反擊：陪睡政見是韓國...(73960) 政治 13:02 https://tw.news.appledaily.com/politics/realtime/20181029/1456125/\n",
       "============================\n",
-      "【小型運動休旅】6夯車省油比一比　有3輛...(14611)\n",
+      "【小型運動休旅】6夯車省油比一比　有3輛...(14611) 3C 13:02 https://tw.lifestyle.appledaily.com/gadget/realtime/20181029/1456074/\n",
       "============================\n",
-      "〈雙姝爭后1〉Sandy搶《聲林之王》主...\n",
+      "〈雙姝爭后1〉Sandy搶《聲林之王》主... 壹週刊 13:00 https://tw.news.appledaily.com/nextmag/realtime/20181029/1456211/\n",
       "============================\n",
-      "​〈雙姝爭后2〉吳宗憲聯手女兒Sandy...\n",
+      "​〈雙姝爭后2〉吳宗憲聯手女兒Sandy... 壹週刊 13:00 https://tw.news.appledaily.com/nextmag/realtime/20181029/1456212/\n",
       "============================\n",
-      "​〈雙姝爭后3〉漲價or靠自己 綜藝天王...\n",
+      "​〈雙姝爭后3〉漲價or靠自己 綜藝天王... 壹週刊 13:00 https://tw.news.appledaily.com/nextmag/realtime/20181029/1456216/\n",
       "============================\n",
-      "【獨家】白家綺新婚9天被爆戀過汪建民　甜...\n",
+      "【獨家】白家綺新婚9天被爆戀過汪建民　甜... 娛樂 12:58 https://tw.entertainment.appledaily.com/realtime/20181029/1456202/\n",
       "============================\n",
-      "台鐵新局長張政源自願從政次降任　月薪少了...(4317)\n",
+      "台鐵新局長張政源自願從政次降任　月薪少了...(4317) 政治 12:55 https://tw.news.appledaily.com/politics/realtime/20181029/1456159/\n",
       "============================\n",
-      "華德動能交付欣欣客運12台電動巴士　今上...\n",
+      "華德動能交付欣欣客運12台電動巴士　今上... 財經 12:54 https://tw.finance.appledaily.com/realtime/20181029/1456269/\n",
       "============================\n",
-      "賓士車撞翻救護車　病患飛出車外(2075)\n",
+      "賓士車撞翻救護車　病患飛出車外(2075) 社會 12:51 https://tw.news.appledaily.com/local/realtime/20181029/1456220/\n",
       "============================\n",
-      "今年雙11出生寶寶    送7990元大...(4064)\n",
+      "今年雙11出生寶寶    送7990元大...(4064) 3C 12:50 https://tw.lifestyle.appledaily.com/gadget/realtime/20181029/1456070/\n",
       "============================\n",
-      "羨慕同學捧現金炫富　男大生出賣帳戶成詐欺...(79)\n",
+      "羨慕同學捧現金炫富　男大生出賣帳戶成詐欺...(79) 社會 12:50 https://tw.news.appledaily.com/local/realtime/20181029/1456233/\n",
       "============================\n",
-      "《藍色大門》泳池將拆除　陳柏霖桂綸鎂重溫...(188)\n",
+      "《藍色大門》泳池將拆除　陳柏霖桂綸鎂重溫...(188) 娛樂 12:46 https://tw.entertainment.appledaily.com/realtime/20181029/1456256/\n",
       "============================\n",
-      "【獨家】小S新節目無奈減薪　吞4千萬義大...(102544)\n",
+      "【獨家】小S新節目無奈減薪　吞4千萬義大...(102544) 娛樂 12:45 https://tw.entertainment.appledaily.com/realtime/20181029/1455822/\n",
       "============================\n",
-      "王景玉逃死出庭精神佳　秒回個資稱「都有吃...(9677)\n",
+      "王景玉逃死出庭精神佳　秒回個資稱「都有吃...(9677) 社會 12:44 https://tw.news.appledaily.com/local/realtime/20181029/1456143/\n",
       "============================\n",
-      "【最即時專題5】邱議瑩繼續譴責韓國瑜　陳...(829)\n",
+      "【最即時專題5】邱議瑩繼續譴責韓國瑜　陳...(829) 政治 12:43 https://tw.news.appledaily.com/politics/realtime/20181029/1456255/\n",
       "============================\n",
-      "【更新】墜江影片曝光！重慶公車衝落長江　...(7852)\n",
+      "【更新】墜江影片曝光！重慶公車衝落長江　...(7852) 國際 12:42 https://tw.news.appledaily.com/international/realtime/20181029/1456071/\n",
       "============================\n",
-      "流感疫苗變質影響接種﹖　疾管署：持續監控(135)\n",
+      "流感疫苗變質影響接種﹖　疾管署：持續監控(135) 生活 12:42 https://tw.news.appledaily.com/life/realtime/20181029/1456254/\n",
       "============================\n",
-      "女搭小黃忘拿萬元筆電　熱心警1小時尋回(235)\n",
+      "女搭小黃忘拿萬元筆電　熱心警1小時尋回(235) 社會 12:40 https://tw.news.appledaily.com/local/realtime/20181029/1456247/\n",
       "============================\n",
-      "辱罵兄長女友髒字　女遭公然侮辱起訴(300)\n",
+      "辱罵兄長女友髒字　女遭公然侮辱起訴(300) 社會 12:38 https://tw.news.appledaily.com/local/realtime/20181029/1456235/\n",
       "============================\n",
-      "新竹晶品城百貨男子墜樓　送醫無生命跡象(701)\n",
+      "新竹晶品城百貨男子墜樓　送醫無生命跡象(701) 社會 12:37 https://tw.news.appledaily.com/local/realtime/20181029/1456249/\n",
       "============================\n",
-      "2月大女嬰猝死遭丟包醫院　狠心母逃跑原因...(15633)\n",
+      "2月大女嬰猝死遭丟包醫院　狠心母逃跑原因...(15633) 社會 12:36 https://tw.news.appledaily.com/local/realtime/20181029/1456169/\n",
       "============================\n",
-      "印尼獅航墜海189人生死未卜　外交部：持...(2598)\n",
+      "印尼獅航墜海189人生死未卜　外交部：持...(2598) 政治 12:35 https://tw.news.appledaily.com/politics/realtime/20181029/1456251/\n",
       "============================\n",
-      "普悠瑪事故創花東　觀光局補助出遊交通費1...(1422)\n",
+      "普悠瑪事故創花東　觀光局補助出遊交通費1...(1422) 生活 12:33 https://tw.news.appledaily.com/life/realtime/20181029/1456192/\n",
       "============================\n",
-      "騎車被狗咬！張震嶽打破傷風救命　怒「不該...(2412)\n",
+      "騎車被狗咬！張震嶽打破傷風救命　怒「不該...(2412) 娛樂 12:33 https://tw.entertainment.appledaily.com/realtime/20181029/1456170/\n",
       "============================\n",
-      "大里噴沙工廠傳火警　警消迅速撲滅無傷亡(74)\n",
+      "大里噴沙工廠傳火警　警消迅速撲滅無傷亡(74) 社會 12:33 https://tw.news.appledaily.com/local/realtime/20181029/1456253/\n",
       "============================\n",
-      "機車撞上故障廂型車　騎士送醫不治(1173)\n",
+      "機車撞上故障廂型車　騎士送醫不治(1173) 社會 12:32 https://tw.news.appledaily.com/local/realtime/20181029/1456232/\n",
       "============================\n",
-      "【最即時專題1】「老婆讓韓國瑜睡一晚」　...(141176)\n",
+      "【最即時專題1】「老婆讓韓國瑜睡一晚」　...(141176) 政治 12:28 https://tw.news.appledaily.com/politics/realtime/20181029/1456101/\n",
       "============================\n"
      ]
     }
    ],
    "source": [
     "for news in soup.select('.rtddt a'):\n",
-    "    print(news.select_one('h1').text)\n",
+    "    title    = news.select_one('h1').text\n",
+    "    category = news.select_one('h2').text\n",
+    "    dt       = news.select_one('time').text\n",
+    "    link     = news.get('href')\n",
+    "    #print(news.select('h1')[0])\n",
+    "    print(title, category, dt, link)\n",
     "    print('============================')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "news_ary = []\n",
+    "for news in soup.select('.rtddt a'):\n",
+    "    data     = {} \n",
+    "    data['title']    = news.select_one('h1').text\n",
+    "    data['category'] = news.select_one('h2').text\n",
+    "    data['dt']       = news.select_one('time').text\n",
+    "    data['link']     = news.get('href')\n",
+    "    news_ary.append(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "df = pandas.DataFrame(news_ary)\n",
+    "df.to_excel('applenews.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 抓取內文細節"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "res = requests.get('https://tw.news.appledaily.com/nextmag/realtime/20181029/1456211/')\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "soup = BeautifulSoup(res.text, 'lxml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "〈雙姝爭后1〉Sandy搶《聲林之王》主持　慘遭Lulu攔胡【壹點就報】\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(soup.select_one('h1').text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'看本篇完整版內容，請點以下連結：〈雙姝爭后1〉Sandy搶《聲林之王》主持\\u3000慘遭Lulu攔胡【壹點就報】已播出3集的東森《聲林之王》，是台灣第一個仿照中國大舞台大製作的歌唱節目。有工作人員向《壹週刊》爆料，吳姍儒（Sandy）很想主持這節目，得知後，大力推荐自己，主動跟東森溝通，不料製作單位遲遲未回覆，又透過她老爸吳宗憲（憲哥）說項，令憲哥好友王令麟左右為難。工作人員還透露，當初《聲林之王》在尋覓主持人時，製作人王偉忠覺得主持人會唱歌還是較好，基於須找「合乎節目調性，也能對參賽者給意見」的主持人，因此堅持用發過EP《LuLu，腿》、《可以》和專輯《美小鴨》的Lulu（黃路梓茵），Sandy因此錯失機會...(點我看全文)更多壹週刊報導〈雙姝爭后1〉Sandy搶《聲林之王》主持\\u3000慘遭Lulu攔胡【壹點就報】〈雙姝爭后2〉吳宗憲聯手女兒Sandy\\u3000拿下購物台千萬代言【壹點就報】〈雙姝爭后3〉漲價or靠自己\\u3000綜藝天王星二代大不同 【壹點就報】◎你投訴‧壹週刊幫你爆料\\xa0《壹週刊APP》全新改版！完全免費！快點下載一起掌握新聞！>>IOS下載 https://goo.gl/G3jADF>>android下載 https://goo.gl/5fGOAI\\xa0'"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.select_one('.ndArticle_margin p').text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'出版時間：2018/10/29 13:00'"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.select_one('.ndArticle_creat').text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime \n",
+    "current_time = datetime.now()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(current_time)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Datetime Module\n",
+    "- https://docs.python.org/3/library/datetime.html#strftime-and-strptime-behavior"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2018-10-29'"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# strftime => convert time to string\n",
+    "current_time.strftime('%Y-%m-%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2018-10-29 October Monday'"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "current_time.strftime('%Y-%m-%d %B %A')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2018, 10, 29, 13, 0)"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# strptime => convert string to datetime\n",
+    "a = '2018/10/29 13:00'\n",
+    "datetime.strptime(a, '%Y/%m/%d %H:%M')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.timedelta(8945, 50344, 830297)"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "birth = '1994/5/3 00:00'\n",
+    "current_time - datetime.strptime(birth, '%Y/%m/%d %H:%M')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2018, 11, 3, 13, 59, 4, 830297)"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import timedelta\n",
+    "current_time + timedelta(days = 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018/10/30\n",
+      "2018/10/31\n",
+      "2018/11/01\n",
+      "2018/11/02\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,5):\n",
+    "    #print(current_time + timedelta(days = i))\n",
+    "    print((current_time + timedelta(days = i)).strftime('%Y/%m/%d'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2018, 10, 29, 13, 0)"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt = soup.select_one('.ndArticle_creat').text\n",
+    "datetime.strptime(dt, '出版時間：%Y/%m/%d %H:%M')"
    ]
   },
   {
